--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alwan.bangkitbfaa2">
+    package="com.alwan.bangkitbfaa3">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,16 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BangkitBFAA1">
         <activity
-            android:name="com.alwan.bangkitbfaa2.ui.main.MainActivity"
+            android:name=".ui.setting.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.favorite.UserFavoriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.MainActivity"
             android:exported="true" />
         <activity
-            android:name="com.alwan.bangkitbfaa2.ui.detail.UserDetailActivity"
-            android:parentActivityName="com.alwan.bangkitbfaa2.ui.main.MainActivity"
+            android:name=".ui.detail.UserDetailActivity"
             android:exported="true" />
         <activity
-            android:name="com.alwan.bangkitbfaa2.ui.SplashScreenActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
+            android:name=".ui.SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
